--- a/L5.md
+++ b/L5.md
@@ -201,7 +201,104 @@ public class App {
 	}
 }
 ```
-## JAXB API
+## JAXB API for XML
+> Employee POJO class with XML annotation.
+
+Employee.java
+```java
+import java.io.Serializable;
+import javax.xml.bind.annotation.*;
+@XmlRootElement(name = "employee")
+public class Employee {
+	private String id;
+	private String name;
+	private String address;
+	private int salary;
+	public Employee() {
+	}
+	public Employee(String id, String name, String address, int salary) {
+		this.id = id;
+		this.name = name;
+		this.address = address;
+		this.salary = salary;
+	}
+	@XmlElement
+	public String getId() {
+		return id;
+	}
+	public void setId(String id) {
+		this.id = id;
+	}
+	@XmlElement
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	@XmlElement
+	public String getAddress() {
+		return address;
+	}
+	public void setAddress(String address) {
+		this.address = address;
+	}
+	@XmlElement
+	public int getSalary() {
+		return salary;
+	}
+	public void setSalary(int salary) {
+		this.salary = salary;
+	}
+}
+```
+EmployeeJAXB.java
+```java
+import java.io.File;
+import javax.xml.bind.*;
+public class EmployeeJAXB {
+	public void marshall() {
+		try {
+			Employee emp = new Employee("A001", "rr", "Dhaka", 2000);
+			JAXBContext jc = JAXBContext.newInstance(Employee.class);
+			Marshaller ms = jc.createMarshaller();
+			ms.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, true);
+			ms.marshal(emp, System.out);
+			ms.marshal(emp, new File("src//Employee.xml"));
+		} catch (Exception e) {
+			System.out.println(" " + e.getMessage());
+		}
+	}
+	public void unmarshall() {
+		try {
+			JAXBContext jc = JAXBContext.newInstance(Employee.class);
+			Unmarshaller ums = jc.createUnmarshaller();
+			Employee emp = (Employee) ums.unmarshal(new File("src//Employee.xml"));
+			System.out.println("Emp id " + emp.getId());
+			System.out.println("Emp name " + emp.getName());
+			System.out.println("Emp address " + emp.getAddress());
+			System.out.println("Emp salary " + emp.getSalary());
+		} catch (Exception e) {
+			System.out.println(" " + e.getMessage());
+		}
+	}
+}
+```
+App.java
+```java
+public class App {
+	public static void main(String[] args) {
+		EmployeeJAXB jaxb = new EmployeeJAXB();
+		System.out.println("marshall started.....");
+		jaxb.marshall();
+		System.out.println("marshall done.....");
+		System.out.println("..............");
+		System.out.println("unmarshall started.....");
+		jaxb.unmarshall();
+		System.out.println("unmarshall done.....");
+	}
+}
+```
 # References 
 https://www.youtube.com/watch?v=YirpEhdj0Nw&t=679s
 http://tutorials.jenkov.com/java-io/outputstreamwriter.html
